--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           go-version: "1.25.1"
 
-      - name: Run Tests
-        run: go test ./...
+      - name: Force Failure
+        run: go version
