--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,4 +19,4 @@ jobs:
           go-version: "1.25.1"
 
       - name: Run build script
-        run: ./scripts/buildprod.sh
+        run: bash ./scripts/buildprod.sh
