chore: log error info on failure

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,3 +20,7 @@ jobs:
 
       - name: Run build script
         run: bash ./scripts/buildprod.sh
+
+      - name: Error Report
+        if: failure()
+        run: cat error.log
