chore: go build

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,4 +19,4 @@ jobs:
           go-version: "1.25.1"
 
       - name: Run build script
-        run: bash ./scripts/buildprod.sh
+        run: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o notely
